<resources>
    <string name="app_name">Kookaburra</string>
    <string name="three_dots">about:blank</string>
    <string name="show_menu">Show menu</string>
    <string name="loading">Loading…</string>
    <string name="search_or_type_web_address">Search or type web address</string>
    <string name="browser_title_bar">Browser title bar</string>
    <string name="browser_encryption_icon">Browser encryption icon</string>
    <string name="speak_to_search_microphone_icon">Speak to search, microphone icon</string>
    <string name="input_field_to_search">Input field to search</string>
    <string name="clear_search_input_field">Clear search input field</string>
    <string name="close_tab">Close tab</string>
    <string name="website_fav_icon">Website fav icon</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="menu_share">Share…</string>
    <string name="menu_history">History</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="ssl_error_title">Your connection is not private</string>
    <string name="ssl_error_message">Attackers might be trying to steal your information from expired.badssl.com (for
        example, passwords, messages or credit cards).
    </string>
    <string name="ssl_error_back_btn">Back to safety</string>
    <string name="ssl_error_proceed_btn">Proceed unsafe</string>
    <string name="secure_connection">Secure Connection</string>
    <string name="unsecure_connection">Your Connection is not Secure</string>
    <string name="protocol_message_secure">Your information (for example, passwords or credit card numbers) is private
        when it is sent to this site
    </string>
    <string name="protocol_message_unsecure">You should not enter any sensitive information on this site (for example,
        passwords or credit card numbers), because it could be stolen by attackers
    </string>
    <string name="bookmarks">Bookmarks</string>
    <string name="remove">Remove</string>
    <string name="open">Open</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="details">Details</string>
    <string name="history_dialog_close">History dialog close</string>
    <string name="history_dialog_menu">History dialog menu</string>
    <string name="history">History</string>
    <string name="bookmarks_dialog_menu">Bookmarks dialog menu</string>
    <string name="remove_all">Remove all</string>
    <string name="close">Close</string>
    <string name="settings_close_image">Settings close image</string>
    <string name="autocomp_image">Auto complete image</string>

    <string-array name="search_engine_titles">
        <item>Duck Duck Go</item>
        <item>Bing</item>
        <item>Google</item>
    </string-array>
    <string-array name="search_engine_values">
        <item>https://duckduckgo.com/?q=</item>
        <item>https://www.bing.com/search?q=</item>
        <item>https://www.google.com/search?q=</item>
    </string-array>
</resources>
