<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/colorBrowserWhite">

    <ImageView
        android:contentDescription="@string/speak_to_search_microphone_icon"
        android:id="@+id/url_microphone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:padding="15dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/browser_ic_microphone" />

    <EditText
        android:textColor="@color/colorBrowserText"
        android:autofillHints="url"
        android:id="@+id/url_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/search_or_type_web_address"
        android:imeOptions="actionSearch"
        android:inputType="textUri"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clear_url"
        app:layout_constraintStart_toEndOf="@+id/url_microphone"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <ImageView
        android:contentDescription="@string/clear_search_input_field"
        android:id="@+id/clear_url"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:padding="15dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/browser_ic_close" />
</androidx.constraintlayout.widget.ConstraintLayout>