<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetEnd="0dp"
    app:contentInsetStartWithNavigation="0dp"
    android:layout_width="match_parent"
    android:theme="@style/BrowserTheme"
    android:background="#fff"
    app:layout_scrollFlags="scroll|enterAlways"
    android:layout_height="?android:attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:contentDescription="@string/browser_title_bar"
            android:scrollHorizontally="false"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            android:text="@string/three_dots"
            android:gravity="center"
            android:id="@+id/title_bar"
            android:textColor="@color/colorBrowserText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="40dp"
            android:paddingEnd="10dp"/>
        <ImageView
            android:contentDescription="@string/browser_encryption_icon"
            android:padding="3dp"
            android:layout_width="25dp"
            android:layout_height="25dp" app:srcCompat="@drawable/ic_protocol_secure"
            android:id="@+id/protocol_image"
            app:layout_constraintStart_toStartOf="@+id/title_bar"
            app:layout_constraintBottom_toBottomOf="@+id/title_bar" android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="@+id/title_bar"
            android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>